--- a/.github/workflows/FirstWorkFlow.yml
+++ b/.github/workflows/FirstWorkFlow.yml
@@ -1,1 +1,14 @@
+name: First WorkFLow CI
 
+on: push
+
+jobs:
+ build:
+  runs-on: ubuntu-latest
+  steps:
+    - run: echo 'build'
+
+ test:
+   runs-on: windows-latest
+   steps:
+    - run: echo 'build'
