--- a/.github/workflows/FirstWorkFlow.yml
+++ b/.github/workflows/FirstWorkFlow.yml
@@ -4,13 +4,17 @@ on:
   push:
    branches:
     - 'feature'
-    - '!master'
+    - 'master'
 
 jobs:
  build:
   runs-on: ubuntu-latest
   steps:
-    - run: echo 'build'
+    - name: Setup Java JDK
+      uses: actions/setup-java@v4.6.0
+      with:
+       java-version: 17
+       distribution: 'microsoft'
 
  test:
    runs-on: windows-latest
