--- a/.github/workflows/MavenCIWorkflow.yml
+++ b/.github/workflows/MavenCIWorkflow.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Setup Java JDK
       uses: actions/setup-java@v3.14.1
       with: 
-       java-verion: 17
+       java-version: 17
        distribution: 'oracle'
     - run: 
        mvn --batch-mode --update verify
