--- a/.github/workflows/MavenCIWorkflow.yml
+++ b/.github/workflows/MavenCIWorkflow.yml
@@ -16,7 +16,7 @@ jobs:
        distribution: 'oracle'
     - run: 
        mvn --batch-mode --update-snapshots verify
-       mkdir staging && cp taget/*.jar staging
+       mkdir staging && cp target/*.jar staging
     - name: Upload a Build Artifact     
       uses: actions/upload-artifact@v4.6.2
       with:
