--- a/.github/workflows/Node1.yml
+++ b/.github/workflows/Node1.yml
@@ -1,13 +1,14 @@
 name: myNode JS
 
 on:
- workflow_dispatch
+ pull_request:
+  types:
+   - opened
+  branches:
+   - master
 
 jobs:
  build-node: 
   runs-on: ubuntu-latest
   steps:
-   - name: Setup Node.js environment
-     uses: actions/setup-node@v3.9.1
-     with:
-      node-version: '21'
+   - run: echo 'run whenever PR is opened'
