--- a/.github/workflows/githubsha.yml
+++ b/.github/workflows/githubsha.yml
@@ -12,4 +12,4 @@ jobs:
   runs-on: ubuntu-latest
   steps:
    - name: Display
-     run: echo '${{env.DOCKER_IMAGE}}
+     run: echo '${{env.DOCKER_IMAGE}}'
