--- a/.github/workflows/githubsha.yml
+++ b/.github/workflows/githubsha.yml
@@ -1,7 +1,7 @@
 name: Build and Push
 
 env:
- DOCKER_IMAGE: myapp
+ DOCKER_USERNAME: ${{vars.DOCKER_NAME}}
 on:
  push:
   branches:
@@ -12,4 +12,4 @@ jobs:
   runs-on: ubuntu-latest
   steps:
    - name: Display
-     run: echo '${{env.DOCKER_IMAGE}}'
+     run: echo '${{env.DOCKER_USERNAME}}'
