--- a/.github/workflows/FirstWorkFlow.yml
+++ b/.github/workflows/FirstWorkFlow.yml
@@ -4,15 +4,21 @@ on:
   push:
    branches:
     - 'feature'
-    - '!master'
+    - 'master'
 
 jobs:
- build:
+ build_java:
   runs-on: ubuntu-latest
   steps:
-    - run: echo 'build'
+    - name: Setup Java JDK
+      uses: actions/setup-java@v3.14.1
+      with:
+       java-version: '17'
+       distribution: 'microsoft'
+    
 
  test:
+   needs: build_java
    runs-on: windows-latest
    steps:
-    - run: echo 'build'
+    - run: echo 'test'
